Each utility has its own version number, date of last change and
some description at the top of its ".c" file. All utilities in the main
directory have their own "man" pages. There is also a sg3_utils man page.

Changelog for sg3_utils-1.43 [20160428] [svn: r695]
  - sg_senddiag: add --timeout=SEC option
  - sg_sanitize: add --timeout=SEC option
  - sg_format: add --timeout=SEC option
  - sg_decode sense: add --cdb option
  - sg_ses: handle 2 bit EIIOE field in aes dpage
    - expand join handling of SAS connectors and others
    - expand join debug code
  - sg_logs: fix volume statistics lpage when subpage
    is zero (ssc5r02a); decode mount history log parameter
    - decode Requested recovery, TapeAlert response, and
      Service buffer information lpages for tape
    - add '--pdt=DT' option
  - sg_inq: fix potential unbounded loop in --export
    - update version descriptor list to 20160420
  - sg_inq+sg_vpd: update Extended inquiry data vpd
    page (spc5r09)
  - sg_reassign+sg_write_same: fix ULONG_MAX problem
  - sg_turs+sg_requests: make both accept '--num=NUM'
    and '--number=NUM' for mutual compatibility
  - sg_zone: fix debug cdb naming
  - sg_opcode: add '--enumerate' and '--pdt=' options
  - sg_raw: add '--enumerate' option
  - sg_lib: add SSC maintenance in/out sa names
    - add read buffer(16) command mode names
    - add sg_decode_transportid_str()
  - sg_lib_data: sync asc/ascq codes with T10 20160425
  - rescan-scsi-bus.sh: harden code
  - clang --analyze static checker clean ups
  - shellcheck cleanup on scripts
  - automake: add AM_PROG_AR to configure.ac
    - upgrade to version 1.15

Changelog for sg3_utils-1.42 [20160217] [svn: r663]
  - sg_timestamp: new, to report or set timestamp
  - sg_read_attr: new, supported by tape drives
  - sg_stpg: fix truncation of target port field
  - sg_inq: cope with unicode strings, udev fixes
    - update version descriptor list to 20160125
    - '--export': new entries for UUID descriptor